# SharedFile

./: CMakeLists.txt  xCore
kernel/: CMakeLists.txt  kernel.lds
kernel/asm/: asm_base.h  asm_base.inc  multiboot2.inc
kernel/init/: CMakeLists.txt  entry32.asm
